--- a/MegamanX/MegamanX.vcxproj.filters
+++ b/MegamanX/MegamanX.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Framework\Animator.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Player\Player.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Defines.h">
@@ -132,6 +135,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Framework\Animator.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Player\Player.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
