--- a/MegamanX/MegamanX.vcxproj.filters
+++ b/MegamanX/MegamanX.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="Player\Player.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Player\Buster.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Defines.h">
@@ -138,6 +141,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Player\Player.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Player\Buster.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
