--- a/MegamanX/MegamanX.vcxproj
+++ b/MegamanX/MegamanX.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy\Enemy.cpp" />
     <ClCompile Include="Player\Buster.cpp" />
     <ClCompile Include="Framework\DataTable.cpp" />
     <ClCompile Include="Framework\DataTableMgr.cpp" />
@@ -165,8 +166,10 @@
     <ClCompile Include="GameObjects\TextGo.cpp" />
     <ClCompile Include="Framework\SoundMgr.cpp" />
     <ClCompile Include="GameObjects\SpriteGoEffect.cpp" />
+    <ClCompile Include="Enemy\Stump.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Enemy\Enemy.h" />
     <ClInclude Include="Player\Buster.h" />
     <ClInclude Include="Framework\DataTable.h" />
     <ClInclude Include="Framework\DataTableMgr.h" />
@@ -190,6 +193,7 @@
     <ClInclude Include="GameObjects\TextGo.h" />
     <ClInclude Include="Framework\SoundMgr.h" />
     <ClInclude Include="GameObjects\SpriteGoEffect.h" />
+    <ClInclude Include="Enemy\Stump.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
