나무, 밑동 제작 완료-> 지형으로 작용하면서 버스터 맞으면 파괴됨 // 버스터 피탄이펙트, 적 파괴 이펙트 구현 // 버스터 충돌은 enemy클래스로 추가로 만들어야함 // 버스터 벽충돌도

--- a/MegamanX/MegamanX.vcxproj
+++ b/MegamanX/MegamanX.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Framework\SoundMgr.cpp" />
     <ClCompile Include="GameObjects\SpriteGoEffect.cpp" />
     <ClCompile Include="Enemy\Stump.cpp" />
+    <ClCompile Include="Enemy\Tree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Enemy\Enemy.h" />
@@ -194,6 +195,7 @@
     <ClInclude Include="Framework\SoundMgr.h" />
     <ClInclude Include="GameObjects\SpriteGoEffect.h" />
     <ClInclude Include="Enemy\Stump.h" />
+    <ClInclude Include="Enemy\Tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
