적 유닛 추상클래스 추가, 충돌처리 중력 체력 다 있음 이거 상속받아서 패턴이랑 비행이면 중력정도만 고치면 됨 . 토끼 우선 만들어놓음 // 반드시 토끼 공격 추가할것 // 적이랑 닿을시 데미지 입어야됨 (어라 나무에 닿아도 데미지입나그럼)

--- a/MegamanX/MegamanX.vcxproj.filters
+++ b/MegamanX/MegamanX.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClCompile Include="Enemy\Tree.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy\Rabbit.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\Lumberjack.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Defines.h">
@@ -162,6 +168,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Enemy\Tree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\Rabbit.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\Lumberjack.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
