--- a/MegamanX/MegamanX.vcxproj
+++ b/MegamanX/MegamanX.vcxproj
@@ -138,6 +138,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Enemy\Enemy.cpp" />
+    <ClCompile Include="Enemy\Lumberjack.cpp" />
     <ClCompile Include="Player\Buster.cpp" />
     <ClCompile Include="Framework\DataTable.cpp" />
     <ClCompile Include="Framework\DataTableMgr.cpp" />
@@ -157,6 +158,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Player\Player.cpp" />
+    <ClCompile Include="Enemy\Rabbit.cpp" />
     <ClCompile Include="Scenes\SceneGame.cpp" />
     <ClCompile Include="Scenes\Scene.cpp" />
     <ClCompile Include="Framework\SceneMgr.cpp" />
@@ -171,6 +173,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Enemy\Enemy.h" />
+    <ClInclude Include="Enemy\Lumberjack.h" />
     <ClInclude Include="Player\Buster.h" />
     <ClInclude Include="Framework\DataTable.h" />
     <ClInclude Include="Framework\DataTableMgr.h" />
@@ -185,6 +188,7 @@
     <ClInclude Include="GameObjects\GameObject.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player\Player.h" />
+    <ClInclude Include="Enemy\Rabbit.h" />
     <ClInclude Include="Scenes\SceneGame.h" />
     <ClInclude Include="Scenes\Scene.h" />
     <ClInclude Include="Framework\SceneMgr.h" />
