적 유닛 몸체 닿으면 피격 // 적 투사체 클래스 만듬 (초기화 시에 애니메이션 줘야함)

--- a/MegamanX/MegamanX.vcxproj
+++ b/MegamanX/MegamanX.vcxproj
@@ -137,6 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy\EnemyShot.cpp" />
     <ClCompile Include="Enemy\Enemy.cpp" />
     <ClCompile Include="Enemy\Lumberjack.cpp" />
     <ClCompile Include="Player\Buster.cpp" />
@@ -172,6 +173,7 @@
     <ClCompile Include="Enemy\Tree.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Enemy\EnemyShot.h" />
     <ClInclude Include="Enemy\Enemy.h" />
     <ClInclude Include="Enemy\Lumberjack.h" />
     <ClInclude Include="Player\Buster.h" />
