--- a/MegamanX/MegamanX.vcxproj.filters
+++ b/MegamanX/MegamanX.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClCompile Include="Enemy\Ostrich.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Enemy\Boss.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy\BossShot.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\Defines.h">
@@ -228,6 +234,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Enemy\Ostrich.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\Boss.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy\BossShot.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
